--- a/dist.ini
+++ b/dist.ini
@@ -1,16 +1,52 @@
 name    = Database-Async
-author  = Tom Molesworth <cpan@entitymodel.com>
+author  = Tom Molesworth <TEAM@cpan.org>
 license = Perl_5
 copyright_holder = Tom Molesworth
-copyright_year   = 2015
+copyright_year   = 2018
 main_module	= lib/Database/Async.pm
 
-[GatherDir]
+[Git::GatherDir]
+exclude_filename = Makefile.PL
+[CheckChangesHasContent]
+[Prereqs::FromCPANfile]
+[CheckPrereqsIndexed]
+[CheckExtraTests]
+[VersionFromModule]
+[ReversionOnRelease]
+[NextRelease]
+[OurPkgVersion]
+[GitHub::Meta]
+repo = team-at-cpan/Database-Async
+remote = github
+;[PrePAN]
+;author = http://prepan.org/user/TEAM
+; module = http://prepan.org/module/...
+[InstallGuide]
+; Does not play nicely with InsertExample
+; [Test::EOL]
+[InsertExample]
+[PodInherit]
+[PodSyntaxTests]
+[MojibakeTests]
+[Test::CheckDeps]
+[Test::Compile]
+; [Test::Synopsis]
+[Test::Version]
+; Broken - https://rt.cpan.org/Ticket/Display.html?id=78729
+; [Test::Pod::LinkCheck]
+; [PodCoverageTests]
+; [Test::UnusedVars]
+; [Signature]
+[SpellingCommonMistakesTests]
+[Test::ReportPrereqs]
+[CopyFilesFromRelease]
+copy = Makefile.PL
+[License]
+[Readme]
 [PruneCruft]
 [ManifestSkip]
 [MetaYAML]
-[License]
-[Readme]
+[MetaJSON]
 [MakeMaker]
 eumm_version = 6.48
 prereq_fatal = 1
@@ -19,44 +55,15 @@ prereq_fatal = 1
 [Manifest]
 [TestRelease]
 [ConfirmRelease]
+[Git::Commit]
+allow_dirty = dist.ini
+allow_dirty = cpanfile
+allow_dirty = Changes
+allow_dirty = Makefile.PL
+[Git::Tag]
+tag_format = v%v
+tag_message = Tag v%v for CPAN release
 [UploadToCPAN]
-[Prereqs::FromCPANfile]
-[Prereqs / BuildRequires]
-perl = 5.010001
-[CheckPrereqsIndexed]
-[CheckExtraTests]
-[NextRelease]
-[VersionFromModule]
-[PodVersion]
-[PkgVersion]
-[Homepage]
-[Bugtracker]
-; [PrePAN]
-; author = http://prepan.org/user/xyz
-; module = http://prepan.org/user/xyz
-[InstallGuide]
-[MetaJSON]
-[InsertExample]
-[PodInherit]
-[PodSyntaxTests]
-[MojibakeTests]
-[Test::CheckDeps]
-[Test::Compile]
-[Test::Synopsis]
-[Test::EOL]
-[Test::Version]
-; Broken - https://rt.cpan.org/Ticket/Display.html?id=78729
-[Test::Pod::LinkCheck]
 [ArchiveRelease]
 directory = /home/tom/dev/CPAN-Archive
-; seems to be broken in several ways, even after getting past installation hurdles it complains
-; about the repository needing to be upgraded - all I want is the basic svn cp functionality
-; so handling this outside dzil for now
-; [Subversion::Tag]
-; tag_url = https://entitymodel.com/svn/tag/
-; these next two might break in not-quite-production-ready code
-[PodCoverageTests]
-[Test::UnusedVars]
-[Signature]
-[SpellingCommonMistakesTests]
-[ReversionOnRelease]
+
