--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,14 @@ jobs:
     steps:
     - checkout
     - restore_cache:
-        key: cpan
+        key: cpan-{{ checksum "cpanfile" }}
     - run:
         command: |
           cpanm -n $(dzil authordeps)
           cpanm --installdeps .
-          perl Makefile.PL && make && make test
+          dzil build && perl Makefile.PL && make && make test
         name: Run tests
     - save_cache:
-        key: cpan
+        key: cpan-{{ checksum "cpanfile" }}
         paths:
             - /usr/local/lib/perl5/site_perl
