Update CircleCI config to handle coverage properly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,17 @@ jobs:
     - run:
         command: |
           cpanm -n $(dzil authordeps)
-          cpanm --installdeps .
-          dzil build && perl Makefile.PL && make && make test
-        name: Run tests
+          cpanm -n --installdeps --with-develop .
+        name: Install deps
     - save_cache:
         key: cpan-{{ checksum "cpanfile" }}
         paths:
             - /usr/local/lib/perl5/site_perl
+    - run:
+        command: |
+          perl Makefile.PL && make && make test
+        name: Run tests
+    - run:
+        command: |
+          cover -test -report coveralls
+        name: Coverage
